--- a/package.json
+++ b/package.json
@@ -23,5 +23,10 @@
     "grunt-timer": "^0.6.0",
     "jshint-stylish": "^2.0.1",
     "nodemon": "^1.3.7"
+  },
+  "dependencies": {
+    "bunyan": "^1.4.0",
+    "extend": "^3.0.0",
+    "restify": "^3.0.3"
   }
 }
